# BookingAgent

BookingAgent/: CMakeLists.txt  ClientRequest.cpp  ClientRequest.h  Constant.h  EventTicket.cpp  EventTicket.h  FlightTicket.cpp  FlightTicket.h  HotelVoucher.cpp  HotelVoucher.h  Package.cpp  Package.h  RequestGenerator.cpp  RequestGenerator.h  SmartTravelAgent.cpp  SmartTravelAgent.h  Ticket.h  TravelAgent.cpp  TravelAgent.h  main.cpp
